# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  06 Feb 2003; Martin Schlemmer <azarah@gentoo.org>:
  
    Update src/awk/genenviron.awk to properly set the environment for each
    rc-script's depend() function by sourcing required config files.
  
  05 Feb 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix /sbin/rc-envupdate.sh to use $svcdir to set SVCDIR.  This is thanks
    to Max Kalika <alkern23@yahoo.com>, bug #15050.

  03 Feb 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix /sbin/modules-update to work with module-init-tools-0.9.9.

  30 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add 'use isapnp' to /etc/init.d/modules, closing bug #14677, thanks to
    Hubert Hanghofer <hubert.hanghofer@netbeer.co.at>.

  27 Jan 2003; Donny Davies <woodchip@gentoo.org>:

    Fix halt.sh by moving the nut UPS kill power stuff back into a function!
    Add fix from the wonderful analysis of Toby Dickenson
    <tdickenson@geminidataloggers.com> in #12947.

  26 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix start-stop-daemon to check the call to nice() correctly for failure,
    closing bug #14359, thanks to YAMAKURA Makoto <makoto@dsb.club.ne.jp>.

    Fix globbing $? when checking return value of fsck in /etc/init.d/checkroot
    and /etc/init.d/checkfs.  This closes bug #13320, thanks to good work from
    Malcolm Scott <m@lcolm.org.uk>.

  21 Jan 2003; Mike Frysinger <vapier@gentoo.org>:

    Updated /etc/rc.conf to add elogin/entrance support #13790.

  21 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:

    Update /etc/init.d/keymaps to enable unicode if required.  This closes
    bug #14306 thanks to Danny Milosavljevic <danny_milo@yahoo.com>.

  19 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix deadlock durning shutdown if tmpfs filesystems larger than free